# autonomous-vehicle-linux

./: CMakeLists.txt
Arduino_Codes/all_modules/: all_modules.ino
Linux_Codes/src/WifiCommunication/: main_client.cpp
STM32_Codes/autonomousVehicle_GTU/: .cproject  .mxproject  autonomousVehicle_GTU.ioc
STM32_Codes/autonomousVehicle_GTU/Inc/: FreeRTOSConfig.h  autonomousVehicle_conf.h  helpers.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32_Codes/autonomousVehicle_GTU/Src/: helpers.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_Codes/autonomousVehicle_GTU/Src/Communications/: Communication_Mechanism.c
STM32_Codes/autonomousVehicle_GTU/Src/Controllers/: MainController.c  MainController.h  SteerController.c  SteerController.cpp  SteerController.h  ThrottleController.h
auto/: CMakeLists.txt  main.cpp
auto/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
doc/source/: Communication.cpp  Communication.h
src/HeartbeatMechanism/Test/: main_station.cpp
src/mcu_communication/: CommunicationMechanism.cpp  CommunicationMechanism.h
src/modules/communication/: Makefile  output  prog
src/modules/communication/Taslak_Main/: driver.cpp  driver.d
src/modules/communication/header/: AbstractCommunication.h  Client.h  Communication.h  Server.h
src/modules/communication/source/: AbstractCommunication.cpp  AbstractCommunication.d  Client.cpp  Client.d  Server.cpp  Server.d
